--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding{
+        enabled = true
+    }
 }
 
 dependencies {
@@ -30,6 +33,7 @@ dependencies {
     //support libs
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
 
     //testing
     testImplementation 'junit:junit:4.12'
@@ -42,6 +46,4 @@ dependencies {
 
     //image loading
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
-
-}
+it}
