--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.1.3-2'
+    ext.supportVersion = "26.0.2"
     repositories {
         google()
         jcenter()
