--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,9 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        debug{
+            minifyEnabled false
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -44,6 +47,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-jackson:2.1.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    api 'com.facebook.stetho:stetho-okhttp3:1.5.0'
 
     //image loading
     implementation 'com.github.bumptech.glide:glide:3.7.0'
