--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.1.3-2'
     ext.supportVersion = "26.0.2"
+    ext.androidArchVersion = "1.0.0-alpha9"
     repositories {
         google()
         jcenter()
