--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,8 +46,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
-    androidTestImplementation 'org.mockito:mockito-core:2.7.1'
+    testImplementation "org.mockito:mockito-all:2.+"
 
     //network
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
